--- a/latex/keccak-preimage.tex
+++ b/latex/keccak-preimage.tex
@@ -58,4 +58,13 @@ This sums upto 575 bits larger than required 512 bits.
     \item Time Complexity of Attack $ = 2^{384 - 256 + 1} = 2^{129}$
 \end{enumerate}
 
+\textbf{Note :} In the following document WM refers to Willi Meier
+
+\section{Suggestion by WM}
+
+\subsection{Mail : 5 Feb}
+
+Mail contents are : 
+
+
 \end{document}
