--- a/latex/keccak-preimage.tex
+++ b/latex/keccak-preimage.tex
@@ -304,4 +304,32 @@ of Round-Reduced Keccak.
     \item By solving the system of linear equations just once we get a solution i.e. Time complexity 1.
     \item Time complexity of attack $ = 2^{256 - 256} = 2^{0} = 1$
 \end{enumerate}
+
+\subsection{Preimage attack on 3-round Keccak-512}
+\begin{enumerate}
+    \item \textbf{Note :} This subsection contains my explaination for the attack mentioned in section 6.3 from paper : Linear Structures: Applications to Cryptanalysis
+of Round-Reduced Keccak.
+    \item We proceed as shown in section 6.1, and complete the 2 rounds.
+    \item The bits input to step $\chi$ of the second round are all linear.
+    \item Directly inverse 320 bits through $\chi^{-1}$ from a given hash value.
+    \item Of the inverted state, each bit is a sum of 11 bits of the output of the second round.
+    \item Since $\pi \circ \rho$ just permutate the positions of the bits and $\iota$ just add a constant to the first lane, they do not increase the nonlinear terms, and thus we neglect these steps in the last one and a half rounds.
+    \item As in section 6.3 per equation (14) the equation of $C[x][y][z]$
+    \item Expanding it :
+    \item \[
+        C[x][y][z] = B[x][y][z] \oplus \oplus_{y' = 0}^{4} B[x-1][y'][z] \oplus \oplus_{y' = 0}^{4} B[x+1][y'][z-1]
+    \]
+    \item Open all the expressions and separate two terms $B[x][y][z]$ and $B[x-1][y][z]$ and rest 9 terms remain as it is.
+    \item So \[ B[x][y][z] \oplus B[x-1][y][z] = (a \oplus c + b) \oplus d
+    \]
+    \item Where \[
+        a = A[x][y][z], b = A[x + 1][y][z], c = A[x + 2][y][z], d = A[x - 1][y][z]
+    \]
+    \item So guessing $d$ and other 9 terms would make $C[x][y][z]$ linear.
+    \item Hence, We linearize $C[x][y][z]$ by guessing 10 bits input to step $\chi$.
+    \item That is, we obtain 11 = 1 + 10 linear equations and match 1 bit of the hash value.
+    \item As such, we can match $128/11 = 11$ bits of the hash value since we have 128 variables.
+    \item Time complexity of preimage attack $= 2^{512 - 11} = 2^{501}$.
+    \item \textbf{Note:} There is an improvement for the above attack mentioned in 6.3 by which attack complexity is $= 2^{482}$.
+\end{enumerate}
 \end{document}
