some comments regarding erocrypt paper allocating approach

--- a/latex/keccak-preimage.tex
+++ b/latex/keccak-preimage.tex
@@ -362,4 +362,12 @@ of Round-Reduced Keccak.
     \item Attack complexity $ = 2^{256 - 78} = 2^{178}$.
     \item If correct, there is a small improvement of $2^{14}$.
 \end{enumerate}
+
+\subsection{EuroCrypt'19 Keccak attack :}
+\textbf{Preimage Attacks on Round-reduced Keccak -224/256 via an Allocating Approach}
+\begin{enumerate}
+    \item Key takeaways :
+    \item Try to use two message blocks instead of one, so as to satisfy some initial conditions by xor-ing the second message block into the output state of the first block.
+    \item Keep the structure simple
+\end{enumerate}
 \end{document}
